--- a/css/common.css
+++ b/css/common.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-    background-color: #cccccc;
+    background-color: #cccccc00;
     display: flex;
     justify-content: center;
     height: 100%;
@@ -20,4 +20,8 @@ body {
 
 button {
     cursor: pointer;
+}
+
+.capitalize {
+    text-transform: capitalize;
 }
