--- a/css/index.css
+++ b/css/index.css
@@ -78,6 +78,10 @@
     margin: 0 10px;
 }
 
+.resume-search .resume-search-filter button i {
+    margin: 0 10px;
+}
+
 .resume-search .resume-search-filter input {
     flex-grow: 5;
 }
@@ -127,7 +131,7 @@
 
 .resume-main>.resume-main-section {
     width: 80%;
-    margin: 15px;
+    padding: 15px;
 }
 
 .resume-main>.resume-main-aside p {
@@ -166,4 +170,50 @@
 .no-result-found img {
     width: 20%;
     margin-right: 50px;
+}
+
+@media screen and (max-width: 768px) {
+    .resume-search {
+        padding: 10px;
+    }
+    .resume-search,
+    .resume-item {
+        width: 100%;
+        box-sizing: border-box;
+    }
+    .resume-main {
+        display: block;
+    }
+    .resume-main>.resume-main-aside {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
+    .resume-main>.resume-main-aside ul {
+        text-align: left;
+        padding: 15px;
+    }
+    .resume-main>.resume-main-section {
+        width: 100%;
+        box-sizing: border-box;
+    }
+    .resume-main>.resume-main-section .resume-main-section-details>div {
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .resume-search .resume-search-filter {
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .resume-search .resume-search-filter button span {
+        display: none;
+    }
+    .resume-search .resume-search-filter button,
+    .resume-search .resume-search-filter input {
+        padding: 15px 7px;
+        margin: 0 5px;
+    }
+    .resume-search .resume-search-filter {
+        padding: 25px 0px;
+    }
 }
